testsuite/tests/indexed-types/should_fail/T13092/all.T
# Test that we check consistency of local type family instances
# with imported ones

test('T13092', extra_files(['A.hs', 'B.hs', 'C.hs', 'Main.hs']),
     makefile_test, ['T13092'])
